# CircuitSimulator

./: .gitignore  CMakeLists.txt  plot_tran.py  tran_out.csv
docs/: proj1_v01.doc
include/: circuit.hpp  dcanalysis.hpp  element.hpp  parser.hpp  sim.hpp  solver.hpp  tanalisis.hpp  utils.hpp
src/: circuit.cpp  dcanalysis.cpp  element.cpp  main.cpp  parser.cpp  tanalisis.cpp
tests/: buffer.sp  dbmixer.sp
